# sdl_game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cc.c
assets/images/: goku_148x117.xcf  helicopter207x92.xcf  piccolo_125x125.xcf
assets/levels/: levels.tiled-session
assets/levels/map1/: map1.tmx
assets/levels/map2/: blocks40x40.tsx  map.tmx  map2.tmx
assets/levels/map3/: blocks40x40.tsx  map.tmx
assets/levels/maps/: map1.tmx  map2.tmx
assets/xml/: attack.xml  test_data.xml  test_settings.xml
cmake/: comm_macros.cmake  findsdl.cmake
tests/: CMakeLists.txt
tests/anim_sprite/: game.cpp  game.h  main.cpp
tests/game_class/: game.cpp  game.h  main.cpp
tests/game_obj/: game.cpp  game.h  game_object.cpp  game_object.h  player.cpp  player.h  texture_manager.h
tests/game_obj_polymorphism/: CMakeLists.txt  enemy.cpp  enemy.h  game.cpp  game.h  game_object.h  main.cpp  player.cpp  sdl_game_object.cpp  sdl_game_object.h
tests/game_over_state/: animated_graphic.cpp  animated_graphic.h  enemy.cpp  enemy.h  game.cpp  game.h  game_over_state.cpp  game_over_state.h  game_state.h  game_state_event.h  game_state_machine.cpp  input_handler.h  loader_params.h  main.cpp  menu_button.cpp  menu_state.cpp  pause_state.cpp  pause_state.h  play_state.cpp  play_state.h  player.cpp  player.h  sdl_game_object.cpp  sdl_game_object.h  texture_manager.cpp
tests/hello/: CMakeLists.txt  main.cpp
tests/include/data_structure/: circular_queue.h  circular_queue_2.h
tests/include/lock/: shared_recursive_mutex.h
tests/include/math/: number.h  vector2d.h
tests/include/platform/: platforms.h
tests/lock/: shared_recursive_mutex.h  sharedlock.h  spinlock.h
tests/menu_state/: game_state_machine.cpp  game_state_machine.h  input_handler.h  menu_button.cpp  menu_button.h  menu_state.cpp  menu_state.h  play_state.cpp  play_state.h  player.cpp  sdl_game_object.cpp  sdl_game_object.h
tests/pause_state/: enemy.h  game.cpp  game_state_machine.cpp  game_state_machine.h  game_timing.cpp  game_timing.h  input_handler.h  main.cpp  menu_button.cpp  menu_button.h  menu_state.cpp  menu_state.h  pause_state.cpp  pause_state.h  play_state.cpp  player.cpp  vector2d.h
tests/sdl_image/: CMakeLists.txt  game.cpp
tests/sdl_texture/: game.cpp  game.h  main.cpp
tests/sound/: CMakeLists.txt  animated_graphic.cpp  animated_graphic.h  between_level_state.cpp  between_level_state.h  bullet.h  bullet_handler.cpp  bullet_handler.h  collision.h  collision_manager.cpp  collision_manager.h  enemy.cpp  enemy.h  enemy_bullet.h  eskeletor.h  game.cpp  game.h  game_object.h  game_object_factory.h  game_over_state.cpp  game_over_state.h  game_state.h  game_state_id.cpp  game_state_id.h  game_state_machine.cpp  game_state_machine.h  glider.h  input_handler.cpp  input_handler.h  layer.h  level.cpp  level.h  level1_boss.h  level_parser.cpp  level_parser.h  loader_params.h  main_menu_state.cpp  main_menu_state.h  menu_button.cpp  menu_button.h  (+30 more)
tests/state_machine/: game.cpp  game.h  game_state_machine.cpp  game_state_machine.h  input_handler.cpp  input_handler.h  menu_button.cpp  menu_button.h  menu_state.cpp  menu_state.h  play_state.cpp  play_state.h  player.cpp  player.h  texture_manager.cpp  texture_manager.h
tests/texture_mgr/: game.cpp  game.h  texture_manager.cpp  texture_manager.h
tests/tiled_map/: CMakeLists.txt  enemy.cpp  enemy.h  game.cpp  game_over_state.cpp  game_over_state.h  game_state.h  game_state_machine.cpp  game_state_machine.h  game_timing.cpp  game_timing.h  input_handler.h  level.cpp  level.h  level_parser.cpp  level_parser.h  loader_params.h  main.cpp  menu_button.h  menu_state.cpp  menu_state.h  object_layer.cpp  pause_state.cpp  play_state.cpp  play_state.h  player.h  texture_manager.cpp  texture_manager.h  tile_layer.cpp  tile_layer.h
tests/tiled_map_obj_layer/: CMakeLists.txt  game_object_factory.cpp  game_object_factory.h  game_state_id.h  game_state_machine.h  layer.h  level_parser.cpp  main.cpp  pause_state.cpp  play_state.h  tile_layer.cpp
tests/vector2d/: enemy.h  game.cpp  input_handler.cpp  input_handler.h  sdl_game_object.h
tests/vector2d_joystick_button/: CMakeLists.txt  game.cpp  game.h  input_handler.cpp  input_handler.h  player.cpp  player.h
tests/vector2d_joysticks/: enemy.cpp  game.h  input_handler.cpp  input_handler.h  loader_params.h  main.cpp  texture_manager.cpp  texture_manager.h
tests/vector2d_mouse_keyboard/: CMakeLists.txt  game.cpp  game.h  input_handler.cpp  input_handler.h  player.cpp
tests/xml_object_factories/: CMakeLists.txt  animated_graphic.cpp  animated_graphic.h  game.cpp  game_object.h  game_object_factory.h  game_state.h  game_state_event.h  game_state_machine.cpp  input_handler.cpp  loader_params.h  menu_button.cpp  menu_state.cpp  menu_state.h  pause_state.cpp  pause_state.h  play_state.cpp  player.cpp  sdl_game_object.cpp  sdl_game_object.h  state_parser.cpp
